refactor exception handling and improve error messages in account and transaction services